removed domain white/black lists
