# docs/swagger.json
@@ -133,125 +133,6 @@
                 }
             }
         },
-        "/v1/blacklist/domains": {
-            "get": {
-                "description": "get all blacklisted domains",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "blacklist"
-                ],
-                "summary": "Get blacklisted domains",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.GetDomainsResp"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "upsert domains to blacklist",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "blacklist"
-                ],
-                "summary": "Upsert blacklisted domains",
-                "parameters": [
-                    {
-                        "description": "domains to add",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.UpsertDomainsReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Accepted"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "description": "remove domains from blacklist",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "blacklist"
-                ],
-                "summary": "Remove blacklisted domains",
-                "parameters": [
-                    {
-                        "description": "domains to remove",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.RemoveDomainsReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Accepted"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/v1/blacklist/domains/{domain}": {
-            "get": {
-                "description": "check if a domain is blacklisted",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "blacklist"
-                ],
-                "summary": "Check blacklisted domain",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "domain to check",
-                        "name": "domain",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.CheckDomainResp"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/blacklist/subnets": {
             "get": {
                 "description": "get all blacklisted subnets",
@@ -370,125 +251,6 @@
                     },
                     "400": {
                         "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/v1/whitelist/domains": {
-            "get": {
-                "description": "get all whitelisted domains",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "whitelist"
-                ],
-                "summary": "Get whitelisted domains",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.GetDomainsResp"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "upsert domains to whitelist",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "whitelist"
-                ],
-                "summary": "Upsert whitelisted domains",
-                "parameters": [
-                    {
-                        "description": "domains to add",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.UpsertDomainsReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Accepted"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "description": "remove domains from whitelist",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "whitelist"
-                ],
-                "summary": "Remove whitelisted domains",
-                "parameters": [
-                    {
-                        "description": "domains to remove",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.RemoveDomainsReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Accepted"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/v1/whitelist/domains/{domain}": {
-            "get": {
-                "description": "check if a domain is whitelisted",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "whitelist"
-                ],
-                "summary": "Check whitelisted domain",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "domain to check",
-                        "name": "domain",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.CheckDomainResp"
-                        }
                     }
                 }
             }
@@ -625,14 +387,6 @@
                 }
             }
         },
-        "api.CheckDomainResp": {
-            "type": "object",
-            "properties": {
-                "found": {
-                    "type": "boolean"
-                }
-            }
-        },
         "api.CheckSubnetResp": {
             "type": "object",
             "properties": {
@@ -652,21 +406,6 @@
                     "example": [
                         "fr",
                         "de"
-                    ]
-                }
-            }
-        },
-        "api.GetDomainsResp": {
-            "type": "object",
-            "properties": {
-                "domains": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "bad.com",
-                        "dead.com"
                     ]
                 }
             }
@@ -701,21 +440,6 @@
                 }
             }
         },
-        "api.RemoveDomainsReq": {
-            "type": "object",
-            "properties": {
-                "domains": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "bad.com",
-                        "dead.com"
-                    ]
-                }
-            }
-        },
         "api.RemoveSubnetsReq": {
             "type": "object",
             "properties": {
@@ -742,21 +466,6 @@
                     "example": [
                         "fr",
                         "de"
-                    ]
-                }
-            }
-        },
-        "api.UpsertDomainsReq": {
-            "type": "object",
-            "properties": {
-                "domains": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "bad.com",
-                        "dead.com"
                     ]
                 }
             }
